package jogo;

public class Amazonia {
    
}