package jogo;

public class AnimalMutante {
    
}