package jogo;

public class Criminoso {
    
}
