package jogo;

public class Inimigo {
    
}
