package jogo;

public class Localizacao {
    
}
